# etc

./: Dockerfile.ci_gpu  main.py  requirements.txt  result.txt  setup.cfg  setup.py
classy/: main.py
classy/representation/: main.py  representations.py  setup.py
docker/: Dockerfile.ci_gpu
docker/install/: install_fasttext.sh  install_pte.sh  install_requirements.sh  requirements.txt  ubuntu_install_core.sh  ubuntu_install_pip.sh  ubuntu_install_python.sh
etc/: Executors.py  base.py  default_descriptors.py  main_e2e.py  requirements.txt  teste_swem.py
etc/classy/representation/: main.py
etc/hyperparams_search/: hyperparam_search.py
etc/methods/: fasttext.py  frequency_based.py  lstm.py  pte.py  stop_words.py  swem.py
netc/: __init__.py  main.py
netc/analysis/: utils.py
netc/datasets/: __init__.py  conversors.py  dataset.py
netc/descriptors/: __init__.py  cls_desc.py  dst_desc.py
netc/experiments/: experiments.py
netc/methods/: ETCClassifier.py  __init__.py  fasttext.py  frequency_based.py
netc/methods/ETC/: FocalLoss.py  Similarities.py  __init__.py
netc/methods/ETC/EnsembleTC/: ETCModel.py
netc/methods/ETC/tfidfatt/: AttTFIDFClassifier.py  (+3 more)
netc/methods/PTE/: PTEWrapper.py  install.sh
netc/methods/TransformBased/: DeepClassifier.py  download_models.sh  miscellaneous.py
netc/methods/tfidfatt/: AttentionTFIDF.py  EmbbedingTFIDF.py  FocalLoss.py  Similarities.py  TrainerAttentionTFIDF.py  tokenizer.py
netc/trainers/: ETC_trainer.py  __init__.py  hug_trainers.py  skl_trainers.py  trainers.py
netc/utils/: __init__.py  base.py  builder.py
(+5 files in other folders)
