[metadata]
description-file = README.md
[project]
name = "netc"
version = "0.2.0"
authors = [
  { name="Vítor Mangaravite", email="vitormangaravite@dcc.ufmg.br" },
]
description = "Next Environment for Text Classification project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/UFMG-Database-lab/etc/"